# dbvoyage

./: .gitignore  CMakeLists.txt  README.md  main.cpp  parser.hpp  run.sh
dump_parser/: parser.hpp
extraction/: abstract_article_extractor.hpp  article_link_extractor.hpp  cities_section_extractor.hpp  extraction_manager.hpp  extractor_base.hpp  page_revision_extractor.hpp  regions_section_extractor.hpp  see_section_extractor.hpp  title_extractor.hpp  wiki_link_extractor.hpp
extraction_framework/: CMakeLists.txt  README.md  main.cpp  run.sh
extraction_framework/dump_parser/: parser.hpp
extraction_framework/extraction/: abstract_article_extractor.hpp  article_link_extractor.hpp  cities_section_extractor.hpp  do_section_extractor.hpp  extraction_manager.hpp  extractor_base.hpp  regions_section_extractor.hpp  see_section_extractor.hpp  title_extractor.hpp  wiki_link_extractor.hpp
extraction_framework/utils/: clean_object.hpp  listing_parameters.hpp  triple.hpp  url_format.hpp
extractors/: abstract_article_extractor.hpp  extractor_base.hpp  label_extractor.hpp  page_id_extractor.hpp  page_link_extractor.hpp  see_section_extractor.hpp
server/: package.json  server.js
server/scripts/: install_virtuoso.sh  load_rdf_data.sh
server/static/js/: sparql_query.js
server/static/routes/: index.html  invalid_query.html  sparql.html
utils/: listing_parameters.hpp  transitive_closure.hpp  triple.hpp  url_format.hpp
